--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "tsx src/index.ts",
     "dev": "tsx -r dotenv/config src/index.ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && cp .env dist/ ",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prisma:generate": "prisma generate",
