--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,14 @@ COS_SECRET_ID=your_cos_secret_id
 COS_SECRET_KEY=your_cos_secret_key
 COS_REGION=ap-guangzhou
 COS_BUCKET=your-bucket-name
+COS_EXPIRES_IN=7d
+
+# 阿里云对象存储配置
+OSS_ACCESS_KEY_ID=your_oss_access_key_id
+OSS_ACCESS_KEY_SECRET=your_oss_access_key_secret
+OSS_BUCKET=your-oss-bucket-name
+OSS_REGION=your-oss-region
+OSS_EXPIRES_IN=7d
 
 # 日志配置
 LOG_LEVEL=info
