--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ NODE_ENV=development
 
 # 数据库配置
 DATABASE_URL="mongodb://username:password@localhost:27017/ez-forum?authSource=admin"
+MONGO_USERNAME=username
+MONGO_PASSWORD=password
 
 # JWT配置
 JWT_SECRET=your_jwt_secret_key
