--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - ./public:/app/public
     depends_on:
       - mongo
+    command: sh -c "tsx prisma/seed.ts"  # 启动时运行种子脚本
     networks:
       - ez-forum-network
 
