--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,20 @@ services:
       - PORT=3009
       - HOST=0.0.0.0
       - DATABASE_URL=${DATABASE_URL}
+      - MONGO_USERNAME=${MONGO_USERNAME}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
       - JWT_SECRET=${JWT_SECRET}
       - JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
       - OSS_ACCESS_KEY_ID=${OSS_ACCESS_KEY_ID}
       - OSS_ACCESS_KEY_SECRET=${OSS_ACCESS_KEY_SECRET}
       - OSS_BUCKET=${OSS_BUCKET}
+      - OSS_REGION=${OSS_REGION}
+      - OSS_EXPIRES_IN=${OSS_EXPIRES_IN}
+      - COS_SECRET_ID=${COS_SECRET_ID}
+      - COS_SECRET_KEY=${COS_SECRET_KEY}
+      - COS_BUCKET=${COS_BUCKET}
+      - COS_REGION=${COS_REGION}
+      - COS_EXPIRES_IN=${COS_EXPIRES_IN}
       - LOG_LEVEL=${LOG_LEVEL}
     volumes:
       - ./logs:/app/logs
