--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: ez-forum-seed
-    restart: "no"
+    restart: always
     environment:
       - NODE_ENV=production
       - DATABASE_URL=${DATABASE_URL}
