--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,13 @@ OSS_EXPIRES_IN=7d
 
 # 日志配置
 LOG_LEVEL=info
+
+# 管理员账户信息
+ADMIN_USERNAME="admin"
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="admin_password"
+
+# 第二个管理员账户信息
+SECOND_ADMIN_USERNAME="second_admin"
+SECOND_ADMIN_EMAIL="second_admin@example.com"
+SECOND_ADMIN_PASSWORD="your_second_admin_password"
