--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,12 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - MONGO_USERNAME=${MONGO_USERNAME}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
+      - ADMIN_USERNAME=${ADMIN_USERNAME}
+      - ADMIN_EMAIL=${ADMIN_EMAIL}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - SECOND_ADMIN_USERNAME=${SECOND_ADMIN_USERNAME}
+      - SECOND_ADMIN_EMAIL=${SECOND_ADMIN_EMAIL}
+      - SECOND_ADMIN_PASSWORD=${SECOND_ADMIN_PASSWORD}
     command: ["sh", "-c", "sleep 20 && node dist/seed.js"]
     depends_on:
       - app
