--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,12 @@ services:
       - OSS_ACCESS_KEY_SECRET=${OSS_ACCESS_KEY_SECRET}
       - OSS_BUCKET=${OSS_BUCKET}
       - OSS_REGION=${OSS_REGION}
-      - OSS_EXPIRES_IN=${OSS_EXPIRES_IN}
-      - COS_SECRET_ID=${COS_SECRET_ID}
-      - COS_SECRET_KEY=${COS_SECRET_KEY}
-      - COS_BUCKET=${COS_BUCKET}
-      - COS_REGION=${COS_REGION}
-      - COS_EXPIRES_IN=${COS_EXPIRES_IN}
+      - ADMIN_USERNAME=${ADMIN_USERNAME}
+      - ADMIN_EMAIL=${ADMIN_EMAIL}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - SECOND_ADMIN_USERNAME=${SECOND_ADMIN_USERNAME}
+      - SECOND_ADMIN_EMAIL=${SECOND_ADMIN_EMAIL}
+      - SECOND_ADMIN_PASSWORD=${SECOND_ADMIN_PASSWORD}
       - LOG_LEVEL=${LOG_LEVEL}
     volumes:
       - ./logs:/app/logs
