--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ HOST=0.0.0.0
 NODE_ENV=development
 
 # 数据库配置
-DATABASE_URL="mongodb://username:password@localhost:27017/ez-forum?authSource=admin"
+DATABASE_URL="mongodb://username:password@mongo:27017/ez-forum?authSource=admin"
 MONGO_USERNAME=username
 MONGO_PASSWORD=password
 
